--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://posthog.com/apps",
   "repository": "git@github.com:PostHog/apps.git",
   "scripts": {
-    "copy-apps": "node ./scripts/copy-apps.js"
+    "build": "rollup -c",
+    "copy-apps": "node ./scripts/copy-apps.js",
+    "clean": "rm -rf dist/"
   },
   "bugs": {
     "url": "https://github.com/posthog/apps/issues"
@@ -19,7 +21,13 @@
   "private": true,
   "workspaces": ["./src/packages/*"],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "adm-zip": "^0.5.9",
+    "glob": "^8.0.3",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@rollup/plugin-typescript": "^9.0.2"
   }
 }
