--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es2017",
+    "target": "es2018",
 
-    "module": "commonjs",
+    "module": "es2020",
     "moduleResolution": "node",
     "baseUrl": "./",
+    "outDir": "dist",
     "resolveJsonModule": true,
 
     "allowJs": true,
     "checkJs": true,
+    "noEmit": true,
+    "removeComments": true,
 
     "declaration": false,
     "sourceMap": false,
