--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "node": ">=16 <19"
   },
   "private": true,
-  "workspaces": ["./src/packages/*"],
+  "workspaces": [
+    "./src/packages/*"
+  ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "adm-zip": "^0.5.9",
     "glob": "^8.0.3",
+    "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
