--- a/package.json
+++ b/package.json
@@ -19,18 +19,14 @@
     "node": ">=16 <19"
   },
   "private": true,
-  "workspaces": [
-    "./src/packages/*"
-  ],
+  "workspaces": ["./src/packages/*"],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
     "adm-zip": "^0.5.9",
     "glob": "^8.0.3",
     "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "@rollup/plugin-typescript": "^9.0.2"
   }
 }
