--- a/src/packages/schema-enforcer-plugin/package.json
+++ b/src/packages/schema-enforcer-plugin/package.json
@@ -20,9 +20,9 @@
     },
     "homepage": "https://github.com/PostHog/posthog-schema-enforcer-plugin#readme",
     "devDependencies": {
+        "@posthog/plugin-scaffold": "^1.3.4",
         "husky": "^4.3.0",
         "lint-staged": "^10.5.2",
-        "posthog-plugins": "^0.1.2",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.0",
         "rollup": "^2.22.1",
