--- a/src/packages/posthog-plugin-geoip/package.json
+++ b/src/packages/posthog-plugin-geoip/package.json
@@ -1,14 +1,8 @@
 {
     "name": "posthog-plugin-geoip",
-    "version": "1.1.0",
+    "version": "0.0.1",
     "description": "Enrich PostHog events and persons with IP location data",
-    "keywords": [
-        "posthog",
-        "plugin",
-        "maxmind",
-        "geoip",
-        "geolite"
-    ],
+    "keywords": ["posthog", "plugin", "maxmind", "geoip", "geolite"],
     "main": "dist/index.js",
     "repository": "github:PostHog/posthog-plugin-geoip",
     "bugs": {
