--- a/src/packages/posthog-plugin-replicator/package.json
+++ b/src/packages/posthog-plugin-replicator/package.json
@@ -1,12 +1,8 @@
 {
     "name": "posthog-plugin-replicator",
-    "version": "1.1.1",
+    "version": "0.0.1",
     "description": "Replicate PostHog event stream in another PostHog instance",
-    "keywords": [
-        "posthog",
-        "plugin",
-        "replication"
-    ],
+    "keywords": ["posthog", "plugin", "replication"],
     "main": "index.ts",
     "repository": "github:PostHog/posthog-plugin-replicator",
     "bugs": {
