--- a/src/packages/posthog-redshift-import-plugin/package.json
+++ b/src/packages/posthog-redshift-import-plugin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "posthog-redshift-import-plugin",
     "private": true,
-    "version": "0.0.1-beta",
+    "version": "0.0.1",
     "description": "Import PostHog events from Amazon Redshift.",
     "devDependencies": {
         "@posthog/plugin-contrib": "^0.0.3",
