--- a/src/packages/salesforce-plugin/package.json
+++ b/src/packages/salesforce-plugin/package.json
@@ -1,11 +1,8 @@
 {
     "name": "@vinovest/posthog-salesforce",
     "displayName": "Hello World",
-    "version": "1.1.0",
-    "keywords": [
-        "posthog",
-        "plugin"
-    ],
+    "version": "0.0.1",
+    "keywords": ["posthog", "plugin"],
     "main": "dist/index.js",
     "repository": "github:Vinovest/posthog-salesforce",
     "bugs": {
