update package names

--- a/src/packages/flatten-properties-plugin/package.json
+++ b/src/packages/flatten-properties-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "property-flattener-plugin",
+    "name": "@posthog/property-flattener-plugin",
     "version": "0.0.1",
     "description": "Flatten event properties to easily access them in filters.",
     "main": "index.js",
