--- a/src/packages/posthog-avo-plugin/package.json
+++ b/src/packages/posthog-avo-plugin/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "posthog-avo-plugin",
-    "private": true,
+    "name": "@posthog/avo-plugin",
     "version": "0.0.1",
     "description": "Export PostHog events to Avo inspector.",
     "devDependencies": {
