--- a/src/packages/ingestion-alert-plugin/package.json
+++ b/src/packages/ingestion-alert-plugin/package.json
@@ -1,8 +1,10 @@
 {
-    "name": "posthog-ingestion-alert-plugin",
-    "private": true,
+    "name": "@posthog/ingestion-alert-plugin",
     "version": "0.0.1",
-    "keywords": ["posthog", "plugin"],
+    "keywords": [
+        "posthog",
+        "plugin"
+    ],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "jest": {
