--- a/src/packages/posthog-engage-so-plugin/package.json
+++ b/src/packages/posthog-engage-so-plugin/package.json
@@ -18,6 +18,8 @@
         "standard": "^17.0.0"
     },
     "standard": {
-        "ignore": ["test"]
+        "ignore": [
+            "test"
+        ]
     }
 }
