--- a/src/packages/posthog-heartbeat-plugin/package.json
+++ b/src/packages/posthog-heartbeat-plugin/package.json
@@ -2,7 +2,10 @@
     "name": "posthog-heartbeat-plugin",
     "private": true,
     "version": "0.0.1",
-    "keywords": ["posthog", "plugin"],
+    "keywords": [
+        "posthog",
+        "plugin"
+    ],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "scripts": {
