--- a/src/packages/posthog-plugin-geoip/package.json
+++ b/src/packages/posthog-plugin-geoip/package.json
@@ -1,8 +1,14 @@
 {
-    "name": "posthog-plugin-geoip",
+    "name": "@posthog/geoip-plugin",
     "version": "0.0.1",
     "description": "Enrich PostHog events and persons with IP location data",
-    "keywords": ["posthog", "plugin", "maxmind", "geoip", "geolite"],
+    "keywords": [
+        "posthog",
+        "plugin",
+        "maxmind",
+        "geoip",
+        "geolite"
+    ],
     "main": "dist/index.js",
     "repository": "github:PostHog/posthog-plugin-geoip",
     "bugs": {
