--- a/src/packages/posthog-property-filter-plugin/package.json
+++ b/src/packages/posthog-property-filter-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "property-filter-plugin",
+    "name": "@posthog/property-filter-plugin",
     "version": "0.0.1",
     "description": "Filter a list of properties from the event data.",
     "main": "index.js",
