--- a/src/packages/rudderstack-posthog-plugin/package.json
+++ b/src/packages/rudderstack-posthog-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "rudderstack-posthog-plugin",
+    "name": "@posthog/rudderstack-plugin",
     "version": "0.0.1",
     "description": "export data from posthog",
     "main": "index.js",
