--- a/src/packages/semver-flattener-plugin/package.json
+++ b/src/packages/semver-flattener-plugin/package.json
@@ -1,8 +1,10 @@
 {
-    "name": "posthog-semver-flattener-plugin",
-    "private": true,
+    "name": "@posthog/semver-flattener-plugin",
     "version": "0.0.1",
-    "keywords": ["posthog", "plugin"],
+    "keywords": [
+        "posthog",
+        "plugin"
+    ],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "scripts": {
