--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "rollup -c",
         "copy-apps": "node ./scripts/copy-apps.js",
-        "publish-all": "yarn build && node ./scripts/publish.js",
+        "publish-all": "node ./scripts/publish.js",
         "clean": "rm -rf dist/"
     },
     "bugs": {
@@ -20,15 +20,15 @@
         "node": ">=16 <19"
     },
     "private": true,
-    "workspaces": [
-        "./src/packages/*"
-    ],
+    "workspaces": ["./src/packages/*"],
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-typescript": "^9.0.2",
+        "@types/npm": "^7.19.0",
         "adm-zip": "^0.5.9",
         "glob": "^8.0.3",
+        "npm": "^8.19.2",
         "rollup": "^3.2.3",
         "rollup-plugin-copy": "^3.4.0",
         "typescript": "^4.8.4"
