--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,7 +24,7 @@ jobs:
                   registry-url: https://registry.npmjs.org
 
             - name: Install dependencies
-              run: yarn --frozen-lockfile
+              run: yarn install --immutable
 
             - name: Build packages
               run: yarn build
