--- a/src/packages/posthog-filter-out-plugin/tsconfig.json
+++ b/src/packages/posthog-filter-out-plugin/tsconfig.json
@@ -1,19 +1,3 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmit": false,
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "target": "es6",
-    "baseUrl": ".",
-    "rootDir": "./src",
-    "paths": {
-      "src/*": ["./src/*"]
-    }
-  },
-  "lib": ["ESNext"],
-  "include": ["src/**/*.ts"]
+    "extends": "../../../tsconfig.json"
 }
