--- a/src/packages/useragentplugin/tsconfig.json
+++ b/src/packages/useragentplugin/tsconfig.json
@@ -1,12 +1,3 @@
 {
-    "compilerOptions": {
-        "target": "es2018",
-        "module": "commonjs",
-        "outDir": "dist",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "importHelpers": true,
-        "esModuleInterop": true,
-        "lib": ["dom", "es2015", "es2017", "es2018", "es2019"]
-    }
+    "extends": "../../../tsconfig.json"
 }
