--- a/src/packages/posthog-plugin-replicator/package.json
+++ b/src/packages/posthog-plugin-replicator/package.json
@@ -2,11 +2,7 @@
     "name": "@posthog/replicator-plugin",
     "version": "0.0.1",
     "description": "Replicate PostHog event stream in another PostHog instance",
-    "keywords": [
-        "posthog",
-        "plugin",
-        "replication"
-    ],
+    "keywords": ["posthog", "plugin", "replication"],
     "main": "index.ts",
     "repository": "github:PostHog/posthog-plugin-replicator",
     "bugs": {
@@ -20,7 +16,6 @@
         "lint:fix": "eslint --fix .",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "prepublishOnly": "yarn test",
         "typecheck": "tsc"
     },
     "devDependencies": {
