--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@rollup/plugin-typescript": "^9.0.2",
         "adm-zip": "^0.5.9",
         "glob": "^8.0.3",
+        "node-fetch": "^3.2.10",
         "rollup": "^3.2.3",
         "rollup-plugin-copy": "^3.4.0",
         "typescript": "^4.8.4"
