--- a/src/packages/bigquery-plugin/tsconfig.json
+++ b/src/packages/bigquery-plugin/tsconfig.json
@@ -1,13 +1,3 @@
 {
-    "extends": "../../../tsconfig.json",
-    "compilerOptions": {
-        "moduleResolution": "Node",
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitReturns": true,
-        "noUnusedParameters": true,
-        "esModuleInterop": true,
-        "noEmit": true
-    },
-    "include": ["./index.ts"]
+    "extends": "../../../tsconfig.json"
 }
