--- a/src/packages/posthog-patterns-app/tsconfig.json
+++ b/src/packages/posthog-patterns-app/tsconfig.json
@@ -1,16 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "ES2018",
-    "lib": ["ESNext"],
-    "module": "ES2015",
-    "moduleResolution": "Node",
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noUnusedParameters": true,
-    "esModuleInterop": true,
-    "noEmit": true,
-    "resolveJsonModule": true
-  },
-  "exclude": ["**.test.ts"]
+    "extends": "../../../tsconfig.json"
 }
