--- a/src/packages/posthog-variance-plugin/tsconfig.json
+++ b/src/packages/posthog-variance-plugin/tsconfig.json
@@ -1,18 +1,3 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "ES2017",
-    "noEmit": true
-  },
-  "include": ["src/"]
+    "extends": "../../../tsconfig.json"
 }
