--- a/package.json
+++ b/package.json
@@ -6,32 +6,36 @@
     "repository": "git@github.com:PostHog/apps.git",
     "scripts": {
         "build": "yarn clean && NODE_OPTIONS=--max-old-space-size=8192 rollup -c",
+        "clean": "rm -rf dist/",
         "copy-apps": "node ./scripts/copy-apps.js",
         "publish-all": "node ./scripts/publish.js",
-        "clean": "rm -rf dist/"
+        "test": "jest . --config=jest.config.cjs"
     },
     "bugs": {
         "url": "https://github.com/posthog/apps/issues"
     },
     "author": "PostHog Inc.",
-    "type": "module",
     "license": "MIT",
     "engines": {
         "node": ">=16 <19"
     },
     "private": true,
-    "workspaces": [
-        "./src/packages/*"
-    ],
+    "workspaces": ["./src/packages/*"],
     "devDependencies": {
+        "@babel/core": "^7.19.6",
+        "@babel/preset-env": "^7.19.4",
+        "@babel/preset-typescript": "^7.18.6",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@rollup/plugin-typescript": "^9.0.2",
         "adm-zip": "^0.5.9",
+        "babel-jest": "^29.2.2",
         "glob": "^8.0.3",
+        "jest": "^29.2.2",
         "node-fetch": "^3.2.10",
         "rollup": "^3.2.3",
         "rollup-plugin-copy": "^3.4.0",
+        "ts-jest": "^29.0.3",
         "typescript": "^4.8.4"
     },
     "packageManager": "yarn@3.2.4"
