--- a/src/packages/bigquery-plugin/package.json
+++ b/src/packages/bigquery-plugin/package.json
@@ -14,6 +14,7 @@
         "@types/node-fetch": "^2.6.2",
         "generic-pool": "^3.7.8",
         "jest": "^29.2.2",
+        "node-fetch": "^3.2.10",
         "ts-jest": "^29.0.3",
         "typescript": "^4.7.4"
     }
