--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,11 @@
         "forceConsistentCasingInFileNames": true,
 
         "strict": true,
-        "strictNullChecks": true,
         "alwaysStrict": true,
-        "noUncheckedIndexedAccess": true,
+        // "strictNullChecks": true,
+        // "noUncheckedIndexedAccess": true,
 
         "skipLibCheck": true
     },
-    "exclude": ["./scripts/*"]
+    "exclude": ["node_modules/", "**/*.test*"]
 }
