--- a/manifest.json
+++ b/manifest.json
@@ -290,7 +290,7 @@
         "icon": "https://raw.githubusercontent.com/PostHog/apps/main/src/packages/posthog-orbit-love-plugin/logo.png"
     },
     {
-        "name": "Pagerduty",
+        "name": "Pagerduty (BETA)",
         "url": "https://www.npmjs.com/package/@posthog/pagerduty-plugin",
         "description": "This plugin alerts PagerDuty when a PostHog insights/trends graph goes below or above a threshold.",
         "verified": true,
