--- a/packages/ingestion-alert-plugin/package.json
+++ b/packages/ingestion-alert-plugin/package.json
@@ -1,10 +1,7 @@
 {
     "name": "@posthog/ingestion-alert-plugin",
     "version": "0.0.3",
-    "keywords": [
-        "posthog",
-        "plugin"
-    ],
+    "keywords": ["posthog", "plugin"],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "jest": {
