--- a/packages/useragentplugin/tsconfig.json
+++ b/packages/useragentplugin/tsconfig.json
@@ -1,3 +1,12 @@
 {
-    "extends": "../../../tsconfig.json"
+    "compilerOptions": {
+        "target": "es2018",
+        "module": "commonjs",
+        "outDir": "dist",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "importHelpers": true,
+        "esModuleInterop": true,
+        "lib": ["dom", "es2015", "es2017", "es2018", "es2019"]
+    }
 }
