--- a/packages/posthog-heartbeat-plugin/package.json
+++ b/packages/posthog-heartbeat-plugin/package.json
@@ -1,7 +1,10 @@
 {
     "name": "@posthog/heartbeat-plugin",
     "version": "0.0.3",
-    "keywords": ["posthog", "plugin"],
+    "keywords": [
+        "posthog",
+        "plugin"
+    ],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "scripts": {
