--- a/packages/posthog-plugin-migrator3000/package.json
+++ b/packages/posthog-plugin-migrator3000/package.json
@@ -1,12 +1,8 @@
 {
     "name": "@posthog/migrator3000-plugin",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "Migrate your PostHog events to a new instance.",
-    "keywords": [
-        "posthog",
-        "plugin",
-        "migration"
-    ],
+    "keywords": ["posthog", "plugin", "migration"],
     "main": "index.ts",
     "repository": "github:PostHog/posthog-plugin-migrator3000",
     "bugs": {
