add icon to package.json

--- a/packages/customerio-plugin/package.json
+++ b/packages/customerio-plugin/package.json
@@ -33,5 +33,6 @@
     },
     "lint-staged": {
         "*.{js,ts,tsx,json,yml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/customerio-plugin/logo.png"
 }
