--- a/packages/hubspot-plugin/package.json
+++ b/packages/hubspot-plugin/package.json
@@ -25,5 +25,6 @@
     },
     "lint-staged": {
         "*.{js,ts,tsx,json,yml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/hubspot-plugin/logo.png"
 }
