--- a/packages/posthog-gcs-plugin/package.json
+++ b/packages/posthog-gcs-plugin/package.json
@@ -11,5 +11,6 @@
     },
     "engines": {
         "node": ">= 14.0.0"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-gcs-plugin/logo.png"
 }
