--- a/packages/posthog-patterns-app/package.json
+++ b/packages/posthog-patterns-app/package.json
@@ -17,5 +17,6 @@
     },
     "scripts": {
         "test": "jest ."
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-patterns-app/logo.png"
 }
