--- a/packages/schema-enforcer-plugin/package.json
+++ b/packages/schema-enforcer-plugin/package.json
@@ -41,5 +41,6 @@
     },
     "lint-staged": {
         "*.{js,ts,tsx,json,yml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/schema-enforcer-plugin/logo.png"
 }
