--- a/packages/bigquery-plugin/package.json
+++ b/packages/bigquery-plugin/package.json
@@ -16,5 +16,6 @@
         "jest": "^28.1.3",
         "ts-jest": "^28.0.8",
         "typescript": "^4.7.4"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/bigquery-plugin/logo.png"
 }
