--- a/packages/currency-normalization-plugin/package.json
+++ b/packages/currency-normalization-plugin/package.json
@@ -19,5 +19,6 @@
     "devDependencies": {
         "@posthog/plugin-scaffold": "^1.3.4",
         "jest": "^26.6.3"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/currency-normalization-plugin/logo.png"
 }
