--- a/packages/drop-events-on-property-plugin/package.json
+++ b/packages/drop-events-on-property-plugin/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@posthog/drop-events-on-property-plugin",
     "version": "0.0.4",
-    "packageManager": "yarn@3.2.4"
+    "packageManager": "yarn@3.2.4",
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/drop-events-on-property-plugin/logo.png"
 }
