--- a/packages/first-time-event-tracker/package.json
+++ b/packages/first-time-event-tracker/package.json
@@ -27,5 +27,6 @@
     "devDependencies": {
         "@posthog/plugin-scaffold": "^1.3.4",
         "jest": "^26.6.3"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/first-time-event-tracker/logo.png"
 }
