--- a/packages/github-release-tracking-plugin/package.json
+++ b/packages/github-release-tracking-plugin/package.json
@@ -27,5 +27,6 @@
     },
     "lint-staged": {
         "*.{js,ts,tsx,json,yml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/github-release-tracking-plugin/logo.png"
 }
