--- a/packages/github-star-sync-plugin/package.json
+++ b/packages/github-star-sync-plugin/package.json
@@ -18,5 +18,6 @@
     "devDependencies": {
         "@posthog/plugin-scaffold": "^0.2.9",
         "jest": "^26.6.3"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/github-star-sync-plugin/logo.png"
 }
