--- a/packages/postgres-plugin/package.json
+++ b/packages/postgres-plugin/package.json
@@ -7,5 +7,6 @@
         "@posthog/plugin-scaffold": "^0.10.0",
         "@types/pg": "^8.6.0",
         "pg": "^8.0.0"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/postgres-plugin/logo.png"
 }
