--- a/packages/posthog-engage-so-plugin/package.json
+++ b/packages/posthog-engage-so-plugin/package.json
@@ -21,5 +21,6 @@
         "ignore": [
             "test"
         ]
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-engage-so-plugin/logo.png"
 }
