--- a/packages/posthog-filter-out-plugin/package.json
+++ b/packages/posthog-filter-out-plugin/package.json
@@ -24,5 +24,6 @@
         "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-filter-out-plugin/logo.png"
 }
