--- a/packages/posthog-intercom-plugin/package.json
+++ b/packages/posthog-intercom-plugin/package.json
@@ -43,5 +43,6 @@
     "lint-staged": {
         "*.{js,ts}": "eslint --fix",
         "*.{ts,tsx,js,jsx,json,yaml,toml,css,scss,html,xml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-intercom-plugin/logo.png"
 }
