--- a/packages/posthog-netdata-event-processing/package.json
+++ b/packages/posthog-netdata-event-processing/package.json
@@ -20,5 +20,6 @@
     "devDependencies": {
         "@posthog/plugin-scaffold": "^0.2.2",
         "jest": "^26.6.3"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-netdata-event-processing/logo.png"
 }
