--- a/packages/posthog-orbit-love-plugin/package.json
+++ b/packages/posthog-orbit-love-plugin/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@posthog/orbit-love-plugin",
     "version": "0.0.4",
-    "packageManager": "yarn@3.2.4"
+    "packageManager": "yarn@3.2.4",
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-orbit-love-plugin/logo.png"
 }
