--- a/packages/posthog-plugin-geoip/package.json
+++ b/packages/posthog-plugin-geoip/package.json
@@ -2,7 +2,13 @@
     "name": "@posthog/geoip-plugin",
     "version": "0.0.4",
     "description": "Enrich PostHog events and persons with IP location data",
-    "keywords": ["posthog", "plugin", "maxmind", "geoip", "geolite"],
+    "keywords": [
+        "posthog",
+        "plugin",
+        "maxmind",
+        "geoip",
+        "geolite"
+    ],
     "main": "dist/index.js",
     "repository": "github:PostHog/posthog-plugin-geoip",
     "bugs": {
@@ -45,5 +51,6 @@
     "lint-staged": {
         "*.{js,ts}": "eslint --fix",
         "*.{ts,tsx,js,jsx,json,yaml,toml,css,scss,html,xml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-plugin-geoip/logo.png"
 }
