--- a/packages/posthog-plugin-replicator/package.json
+++ b/packages/posthog-plugin-replicator/package.json
@@ -2,7 +2,11 @@
     "name": "@posthog/replicator-plugin",
     "version": "0.0.4",
     "description": "Replicate PostHog event stream in another PostHog instance",
-    "keywords": ["posthog", "plugin", "replication"],
+    "keywords": [
+        "posthog",
+        "plugin",
+        "replication"
+    ],
     "main": "index.ts",
     "repository": "github:PostHog/posthog-plugin-replicator",
     "bugs": {
@@ -48,5 +52,6 @@
     "lint-staged": {
         "*.{js,ts}": "eslint --fix",
         "*.{ts,tsx,js,jsx,json,yaml,toml,css,scss,html,xml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-plugin-replicator/logo.png"
 }
