--- a/packages/posthog-redshift-import-plugin/package.json
+++ b/packages/posthog-redshift-import-plugin/package.json
@@ -7,5 +7,6 @@
         "@posthog/plugin-scaffold": "0.12.5",
         "@types/pg": "^7.14.11",
         "pg": "^8.0.0"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-redshift-import-plugin/logo.png"
 }
