--- a/packages/posthog-shopify-sync-plugin/package.json
+++ b/packages/posthog-shopify-sync-plugin/package.json
@@ -19,5 +19,6 @@
         "@posthog/plugin-scaffold": "^0.2.9",
         "eslint": "^8.9.0",
         "jest": "^26.6.3"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-shopify-sync-plugin/logo.png"
 }
