--- a/packages/posthog-zendesk-plugin/package.json
+++ b/packages/posthog-zendesk-plugin/package.json
@@ -7,5 +7,6 @@
     "license": "MIT",
     "dependencies": {
         "node-fetch": "^3.2.0"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-zendesk-plugin/logo.png"
 }
