--- a/packages/pubsub-plugin/package.json
+++ b/packages/pubsub-plugin/package.json
@@ -8,5 +8,6 @@
         "@posthog/plugin-scaffold": "^0.12.0",
         "@types/generic-pool": "^3.1.9",
         "generic-pool": "^3.7.8"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/pubsub-plugin/logo.png"
 }
