--- a/packages/redshift-plugin/package.json
+++ b/packages/redshift-plugin/package.json
@@ -14,5 +14,6 @@
         "pg": "^8.0.0",
         "ts-jest": "^28.0.8",
         "typescript": "^4.7.4"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/redshift-plugin/logo.png"
 }
