--- a/packages/s3-export-plugin/package.json
+++ b/packages/s3-export-plugin/package.json
@@ -15,5 +15,6 @@
         "jest": "^27.0.4",
         "ts-jest": "^28.0.8",
         "typescript": "^4.7.4"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/s3-export-plugin/logo.png"
 }
