--- a/packages/semver-flattener-plugin/package.json
+++ b/packages/semver-flattener-plugin/package.json
@@ -1,7 +1,10 @@
 {
     "name": "@posthog/semver-flattener-plugin",
     "version": "0.0.4",
-    "keywords": ["posthog", "plugin"],
+    "keywords": [
+        "posthog",
+        "plugin"
+    ],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "scripts": {
@@ -25,5 +28,6 @@
     },
     "lint-staged": {
         "*.{js,ts,tsx,json,yml}": "prettier --write"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/semver-flattener-plugin/logo.png"
 }
