--- a/packages/snowflake-export-plugin/package.json
+++ b/packages/snowflake-export-plugin/package.json
@@ -25,5 +25,6 @@
     },
     "scripts": {
         "test": "jest"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/snowflake-export-plugin/logo.png"
 }
