--- a/packages/useragentplugin/package.json
+++ b/packages/useragentplugin/package.json
@@ -33,5 +33,6 @@
     },
     "dependencies": {
         "detect-browser": "^5.3.0"
-    }
+    },
+    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/useragentplugin/logo.png"
 }
