Revert "add icon to package.json"
This reverts commit 9cd827bca347705c9c36bc398a283972677e5515.

--- a/packages/posthog-orbit-love-plugin/package.json
+++ b/packages/posthog-orbit-love-plugin/package.json
@@ -1,6 +1,5 @@
 {
     "name": "@posthog/orbit-love-plugin",
     "version": "0.0.5",
-    "packageManager": "yarn@3.2.4",
-    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-orbit-love-plugin/logo.png"
+    "packageManager": "yarn@3.2.4"
 }
