--- a/packages/posthog-plugin-geoip/package.json
+++ b/packages/posthog-plugin-geoip/package.json
@@ -2,13 +2,7 @@
     "name": "@posthog/geoip-plugin",
     "version": "0.0.5",
     "description": "Enrich PostHog events and persons with IP location data",
-    "keywords": [
-        "posthog",
-        "plugin",
-        "maxmind",
-        "geoip",
-        "geolite"
-    ],
+    "keywords": ["posthog", "plugin", "maxmind", "geoip", "geolite"],
     "main": "dist/index.js",
     "repository": "github:PostHog/posthog-plugin-geoip",
     "bugs": {
@@ -51,6 +45,5 @@
     "lint-staged": {
         "*.{js,ts}": "eslint --fix",
         "*.{ts,tsx,js,jsx,json,yaml,toml,css,scss,html,xml}": "prettier --write"
-    },
-    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-plugin-geoip/logo.png"
+    }
 }
