--- a/packages/posthog-plugin-migrator3000/package.json
+++ b/packages/posthog-plugin-migrator3000/package.json
@@ -2,11 +2,7 @@
     "name": "@posthog/migrator3000-plugin",
     "version": "0.0.5",
     "description": "Migrate your PostHog events to a new instance.",
-    "keywords": [
-        "posthog",
-        "plugin",
-        "migration"
-    ],
+    "keywords": ["posthog", "plugin", "migration"],
     "main": "index.ts",
     "repository": "github:PostHog/posthog-plugin-migrator3000",
     "bugs": {
@@ -52,6 +48,5 @@
     "lint-staged": {
         "*.{js,ts}": "eslint --fix",
         "*.{ts,tsx,js,jsx,json,yaml,toml,css,scss,html,xml}": "prettier --write"
-    },
-    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/posthog-plugin-migrator3000/logo.png"
+    }
 }
