--- a/packages/semver-flattener-plugin/package.json
+++ b/packages/semver-flattener-plugin/package.json
@@ -1,10 +1,7 @@
 {
     "name": "@posthog/semver-flattener-plugin",
     "version": "0.0.5",
-    "keywords": [
-        "posthog",
-        "plugin"
-    ],
+    "keywords": ["posthog", "plugin"],
     "author": "PostHog <hey@posthog.com>",
     "license": "MIT",
     "scripts": {
@@ -28,6 +25,5 @@
     },
     "lint-staged": {
         "*.{js,ts,tsx,json,yml}": "prettier --write"
-    },
-    "icon": "https://raw.githubusercontent.com/PostHog/apps/main/packages/semver-flattener-plugin/logo.png"
+    }
 }
