--- a/packages/posthog-plugin-replicator/package.json
+++ b/packages/posthog-plugin-replicator/package.json
@@ -1,8 +1,12 @@
 {
     "name": "@posthog/replicator-plugin",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "Replicate PostHog event stream in another PostHog instance",
-    "keywords": ["posthog", "plugin", "replication"],
+    "keywords": [
+        "posthog",
+        "plugin",
+        "replication"
+    ],
     "main": "index.ts",
     "repository": "github:PostHog/posthog-plugin-replicator",
     "bugs": {
