add laudspeaker app

--- a/packages/posthog-laudspeaker-app/package.json
+++ b/packages/posthog-laudspeaker-app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "laudspeaker-posthog-plugin",
+    "name": "@posthog/laudspeaker-plugin",
     "version": "0.0.6",
     "description": "Export data from PostHog",
     "main": "index.js",
